[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# futures = { version = "0.3", features = ["thread-pool"] }
colored = "2.0.4"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.5"
queues = "1.1.0"
bus = "2.4.1"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
